overflow fix

--- a/pages/portfolio/open-reel/open-reel.module.css
+++ b/pages/portfolio/open-reel/open-reel.module.css
@@ -249,6 +249,7 @@
   width: 100%;
   position: relative;
   margin-bottom: 8%;
+  overflow: hidden;
 }
 
 .seamless__slide {
